--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="secondpage.html">Next page</a>
+    <a href="/next.html">Next page</a>
     
 </body>
 </html>
