--- a/next.html
+++ b/next.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Table</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <header>
+	 <a href="/index.html" title="Соціологічне опитування">Соціологічне опитування</a>
+</header>
     <!-- Table1 -->
      <table border="2" cellpadding="8" cellspacing="18">
         <caption><h1>Table 1</h1></caption>
@@ -106,5 +111,8 @@
         <li>Antonio Conte</li>
         <li>Jurgen Klopp</li>
     </ol>
+    <footer>
+        <a href="/index.html" title="Соціологічне опитування">Соціологічне опитування</a>
+    </footer>
 </body>
 </html>
