--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <header>
         <a href="/next.html" title="Таблиці та списки">Таблиці та списки</a>
     </header>
-    <h1>Соціологічне опитування
-    <p>Особливості вибору професії та пріоритети у житті</p></h1>
+    <h1>Соціологічне опитування - Особливості вибору професії та пріоритети у житті</h1>
     <p>Доброго дня!</p>
      <p>Ми проводимо дане соціологічне опитування серед громадян України віком від 18-ти років</p>
       <p>з метою складання загальної картини пріоритетів та особливостей вибору критеріїв роботи.</p>
