--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <a href="/next.html" title="Таблиці та списки">Таблиці та списки</a>
+        <a href="next.html" title="Таблиці та списки">Таблиці та списки</a>
     </header>
     <h1>Соціологічне опитування - Особливості вибору професії та пріоритети у житті</h1>
     <p>Доброго дня!</p>
