--- a/next.html
+++ b/next.html
@@ -111,6 +111,7 @@
         <li>Antonio Conte</li>
         <li>Jurgen Klopp</li>
     </ol>
+     <a href="/index.html" title="Соціологічне опитування">Соціологічне опитування</a>
     <footer>
         <a href="/index.html" title="Соціологічне опитування">Соціологічне опитування</a>
     </footer>
