--- a/next.html
+++ b/next.html
@@ -7,9 +7,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
-	 <a href="/index.html" title="Соціологічне опитування">Соціологічне опитування</a>
-</header>
+    <a href="index.html" title="Соціологічне опитування">Соціологічне опитування</a>
     <!-- Table1 -->
      <table border="2" cellpadding="8" cellspacing="18">
         <caption><h1>Table 1</h1></caption>
@@ -111,9 +109,7 @@
         <li>Antonio Conte</li>
         <li>Jurgen Klopp</li>
     </ol>
-     <a href="/index.html" title="Соціологічне опитування">Соціологічне опитування</a>
-    <footer>
-        <a href="/index.html" title="Соціологічне опитування">Соціологічне опитування</a>
-    </footer>
+     <a href="index.html" title="Соціологічне опитування">Соціологічне опитування</a>
+    
 </body>
 </html>
