--- a/next.html
+++ b/next.html
@@ -72,6 +72,26 @@
         </tr>
     </table>
     <br/>
+    
+    <!-- New Table -->
+    <table border="2">
+        <caption><h1>Table3</h1></caption>
+        <tr>
+            <th>Heading 1</th><th>Heading 2</th><th>Heading 3</th><th>Heading 4</th>
+        </tr>
+        <tr>
+            <th rowspan="4">Long Column</th><th colspan="3">Long row top</th>
+        </tr>
+        <tr>
+            <th>data</th><th>data</th><th>data</th>
+        </tr>
+        <tr>
+            <th>data</th><th colspan="2">2 cols merged</th>
+        </tr>
+        <tr>
+            <th colspan="3">Long row bottom</th>
+        </tr>
+    </table>
     <!-- List of ballon d'or winner -->
     <details>
         <summary><h1>Name of the Ballon d'or winner</h1></summary>
