--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <fieldset>
                 <legend><b>Ви шукаєте роботу/працюєте по спеціальності</b></legend>
                 <input id="qualification" type="checkbox" name="По спеціальності">
-                <label for="qualification">Працювати в команді</label>
+                <label for="qualification">По спеціальності</label>
                 <br>
                 <input id="noqualification" type="checkbox" name="Перекваліфіковуюсь">
                 <label for="noqualification">Перекваліфіковуюсь</label>
