--- a/next.html
+++ b/next.html
@@ -11,7 +11,7 @@
 <body>
     <a href="index.html" title="Соціологічне опитування">Соціологічне опитування</a>
     <!-- Table1 -->
-    <table border="2" cellpadding="8" cellspacing="18">
+    <table border="2" width="500">
         <caption>
             <h1>Table 1</h1>
         </caption>
@@ -72,7 +72,7 @@
     </table>
     <br/>
     <!-- Table 2 -->
-    <table border="2" cellpadding="8" cellspacing="18">
+    <table border="2" width="500">
         <caption>
             <h1>Table 2</h1>
         </caption>
